--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -9,9 +9,6 @@ on:
       role-to-assume:
         default: arn:aws:iam::348129557613:role/github-oidc-provider-aws
         type: string
-      service: 
-        default: default-service # will override by the caller
-        type: string
       aws-ecr:
         default: 348129557613.dkr.ecr.ap-southeast-1.amazonaws.com
         type: string
@@ -31,15 +28,15 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: ${{ github.event.inputs.aws_region }}
-          role-to-assume: ${{ github.event.inputs.role-to-assume }}
+          aws-region: ${{ inputs.aws_region }}
+          role-to-assume: ${{ inputs.role-to-assume }}
       
       - name: Tag Docker image with datetime format
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ github.event.inputs.aws-ecr }}/${{ github.event.inputs.service }}
+            ${{ inputs.aws-ecr }}/${{ github.event.inputs.service }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
