--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -19,6 +19,10 @@ on:
         default: latest # will override by the caller
         type: string
 
+permissions:
+  id-token: write
+  contents: read        
+
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
