--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -51,6 +51,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
       
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Create and use a new builder instance
+        run: |
+          docker buildx create --name mybuilder --use
+      
       - name: Build and push Docker image
         uses: docker/build-push-action@v6.8.0
         with:
@@ -58,5 +65,6 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          builder: mybuilder
           cache-from: type=registry,ref=${{ inputs.aws-ecr }}/${{ github.event.repository.name }}:cache
           cache-to: type=registry,mode=max,image-manifest=true,oci-mediatypes=true,ref=${{ inputs.aws-ecr }}/${{ github.event.repository.name }}:cache
