--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -45,6 +45,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
+            type=ref,event=tag
             type=sha 
       
       - name: Login to Amazon ECR
