--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -76,14 +76,14 @@ jobs:
         run: |
           echo "repo=${GITHUB_REPOSITORY#*/}" >> $GITHUB_OUTPUT
           echo "service=${GITHUB_REPOSITORY#*/}" >> $GITHUB_OUTPUT
-          echo "repository=morpheuslabs-io/argocd-apps" >> $GITHUB_OUTPUT
+          echo "repository=thienchuong/argocd-app" >> $GITHUB_OUTPUT
           echo "event-type=deploy-prod" >> $GITHUB_OUTPUT
 
           # pretty print the metadata
           echo $DOCKER_METADATA | jq '.'
 
           # get the image tag contains 'v'
-          image_tag=$(echo "$DOCKER_METADATA" | jq -r '.tags[] | select(. | test("v"))')
+          image_tag=$(echo "$DOCKER_METADATA" | jq -r '.tags[] | select(startswith("${{ inputs.aws-ecr }}/${{ github.event.repository.name }}:v")) | split(":")[1]')
           echo $image_tag >> $GITHUB_OUTPUT
           # trigger
       
