--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -86,8 +86,10 @@ jobs:
           imagetag=$(echo "$DOCKER_METADATA" | jq -r '.tags[] | select(startswith("${{ inputs.aws-ecr }}/${{ github.event.repository.name }}:v")) | split(":")[1]')
           echo "image_tag=$imagetag" >> $GITHUB_OUTPUT
 
-      - name: Deploy dispatch
+      - name: Deploy dispatch for main app
         uses: peter-evans/repository-dispatch@v2.1.2
+        # if contains 'v' or 'dev' or 'stg' in the image tag, then deploy to prod
+        if: contains(steps.prepare.outputs.image_tag, 'v') || contains(steps.prepare.outputs.image_tag, 'dev') || contains(steps.prepare.outputs.image_tag, 'stg')
         with:
           token: ${{ secrets.ORG_CI_TOKEN }}
           repository: ${{ steps.prepare.outputs.repository }}
@@ -98,3 +100,18 @@ jobs:
             "service": "${{ steps.prepare.outputs.service }}",
             "image_tag": "${{ steps.prepare.outputs.image_tag }}"
             }
+
+        - name: Deploy dispatch for canary app
+          uses: peter-evans/repository-dispatch@v2.1.2
+          # if contains 'canary' in the image tag, then deploy to canary
+          if: contains(steps.prepare.outputs.image_tag, 'canary')
+          with:
+            token: ${{ secrets.ORG_CI_TOKEN }}
+            repository: ${{ steps.prepare.outputs.repository }}
+            event-type: deploy-canary
+            client-payload: |-
+              {
+              "repo": "${{ steps.prepare.outputs.repo }}",
+              "service": "${{ steps.prepare.outputs.service }}",
+              "image_tag": "${{ steps.prepare.outputs.image_tag }}"
+              }
