--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -73,7 +73,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: ${{ steps.docker_build.outputs.imageid }}
+          image-ref: ${{ inputs.aws-ecr }}/${{ github.event.repository.name }}:${{github.ref_name}}
           format: 'json'
           exit-code: '1'
           ignore-unfixed: true
