--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -101,7 +101,7 @@ jobs:
       - name: Deploy dispatch for main app
         uses: peter-evans/repository-dispatch@v2.1.2
         # if contains 'v' or 'dev' or 'stg' in the image tag, then deploy to prod
-        if: contains(${{ github.ref_name }}, 'v') || contains(${{ github.ref_name }}, 'dev') || contains(${{ github.ref_name }}, 'stg')
+        if: contains(github.ref_name, 'v') || contains(github.ref_name, 'dev') || contains(github.ref_name, 'stg')
         with:
           token: ${{ secrets.ORG_CI_TOKEN }}
           repository: thienchuong/argocd-service
@@ -116,7 +116,7 @@ jobs:
       - name: Deploy dispatch for canary app
         uses: peter-evans/repository-dispatch@v2.1.2
         # if contains 'canary' in the image tag, then deploy to canary
-        if: contains(${{ github.ref_name }}, 'canary')
+        if: contains(github.ref_name, 'canary')
         with:
           token: ${{ secrets.ORG_CI_TOKEN }}
           repository: thienchuong/argocd-service
