--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -21,6 +21,25 @@ permissions:
   contents: read        
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Lint and Test
+        run: |
+          npm run lint
+          npm test
+
   build_and_push:
     runs-on: ubuntu-latest
     steps:
