--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -36,11 +36,10 @@ jobs:
         run: npm install
 
       - name: Lint and Test
-        run: |
-          npm run lint
-          npm test
+        run: npm test
 
   build_and_push:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       
